--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   },
   "dependencies": {
     "d3-request": "^1.0.2",
+    "moment": "^2.14.1",
     "react": "^15.3.1",
+    "react-addons-shallow-compare": "^15.3.0",
     "react-dom": "^15.3.1",
     "react-vis": "^0.5.0"
   },
